# zentanetwork-archived

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
primitives/: cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
runtime/src/weights/: mod.rs  pallet_scheduler.rs
scripts/: docker_run.sh
service/res/: zajin-spec-raw.json  zajin-spec.json
