[package]
authors = ['harunkacemer@zentachain.io, team@zentachain.io']
build = 'build.rs'
description = 'Zentanetwork is a forkless PoS blockchain for communication and data storage.'
edition = '2018'
homepage = 'https://zentachain.io'
license = 'GPL-3.0'
name = 'zentachain'
repository = 'https://github.com/ZentaChain/Zentanetwork'
version = '3.0.0'
default-run = "zentachain"

[[bin]]
name = 'zentachain'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'
vergen = '3.0.4'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
hex-literal = "0.3.1"

# local dependencies
zenta-runtime = { path = '../runtime', version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-consensus-babe = { version = '0.9.0' }
sc-consensus-babe-rpc = { version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-finality-grandpa-rpc = '0.9.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-babe = { version = '0.9.0' }
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'
pallet-contracts  = '3.0.0'
pallet-contracts-rpc  = '3.0.0'

[features]
default = []
runtime-benchmarks = ['zentachain-runtime/runtime-benchmarks']
