[package]
authors = ['harunkacemer@zentachain.io, team@zentachain.io']
edition = '2018'
homepage = 'https://zentachain.io'
license = 'GPL-3.0'
name = 'zentachain-runtime'
repository = 'https://github.com/ZentaChain/Zentanetwork'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.1'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-staking = { default-features = false, version = '3.0.0' }
pallet-contracts = { default-features = false, version = '3.0.0' }
pallet-contracts-primitives = { default-features = false, version = '3.0.0' }
pallet-contracts-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-scheduler = { default-features = false, version = '3.0.0' }

pallet-collective = { default-features = false, version = '3.0.0' }
pallet-elections-phragmen = { default-features = false, version = '3.0.0' }
pallet-treasury = { default-features = false, version = '3.0.0' }
pallet-democracy = { default-features = false, version = '3.0.0' }
pallet-membership = { default-features = false, version = '3.0.0' }
pallet-babe= { default-features = false, version = '3.0.0' }
pallet-staking = { default-features = false, version = '3.0.0' }
pallet-staking-reward-curve = { version = '3.0.0', default-features = false }
pallet-session = { default-features = false, version = '3.0.0' }
pallet-authorship = { default-features = false, version = '3.0.0' }
pallet-authority-discovery = { default-features = false, version = '3.0.0' }
pallet-im-online = { default-features = false, version = '3.0.0' }
substrate-validator-set = { default-features = false, version = '3.0.0' }


[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'pallet-scheduler/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-aura/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-io/std',
    'sp-staking/std',
    'scheduler/std',
    'collective/std',
    'elections-phragmen/std',
    'treasury/std',
    'democracy/std',
    'membership/std',
    'finality-tracker/std',
    'babe/std',
    'staking/std',
    'session/std',
    'authorship/std',
    'authority-discovery/std',
    'im-online/std',
    'validator-set/std',
]
